feat: 添加代码检查及完善部分功能